# spegg

./: .gitignore  Dockerfile  README.adoc  converter.py  docker-compose.yaml  mongo_export.sh  mongo_import.sh  pyproject.toml
.globex/: db_import.sh  docker-compose.yaml  spegg-docker-compose.yaml
data/: Anwendung.csv  Anwendungsversion.csv  Produkttyp.csv  Produkttypversion.csv  Resource.json  ResourceVersion.json  SubjectVersion.json
deploy.k8s/: Make-settings.dev  Make-settings.private-template  Makefile  README.adoc  README.md
deploy.k8s/_subcharts/spegg-api/: Chart.yaml  values.yaml
deploy.k8s/_subcharts/spegg-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy.k8s/_subcharts/spegg-api/templates/tests/: test-connection.yaml
deploy.k8s/_subcharts/spegg-vue/: Chart.yaml  values.yaml
deploy.k8s/_subcharts/spegg-vue/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy.k8s/spegg/: Chart.yaml  values.yaml
deploy.k8s/spegg/templates/: NOTES.txt  _helpers.tpl  gcp.certificate.yaml  gcp.http-redirect.yaml  gcp.ingress.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
deploy.k8s/spegg/templates/tests/: test-connection.yaml
draw.io/: Architecture.drawio  DataModell.drawio  Untitled Diagram.drawio
spegg/: converter.py  db.py  dbmodel.py
spegg/api/: __init__.py  api.py  db.py
spegg/api/model/: __init__.py  approval_object.py  approval_object_version.py  approval_validity.py  common.py
tests/: test_db_query.py
(+1 files in other folders)
