[tool.poetry]
name = "spegg"
version = "0.23.0"
description = ""
authors = ["Spilikin"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24.0"
pydantic = "^1.6.1"
PyYAML = "^6.0"
openpyxl = "^3.0.5"
pymongo = "^3.12.1"
fastapi = "^0.70.0"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
db_clean = "spegg.db:clean"
serve = "spegg.api:serve"