[tool.poetry]
name = "spegg"
version = "2.0.1"
description = ""
authors = ["Spilikin"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pymongo = "^3.12.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
db_clean = "spegg.db:clean"
serve = "spegg.api:serve"