[tool.poetry]
name = "spegg"
version = "2022.3.1"
description = ""
authors = ["Spilikin"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24"
openpyxl = "^3.0"
pymongo = "^3.11"
fastapi = "^0.61"
uvicorn = "^0.17"
pydantic = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
db_clean = "spegg.db:clean"
serve = "spegg.api:serve"